--- a/runtime/index.html
+++ b/runtime/index.html
@@ -1842,8 +1842,15 @@ window.FlexDashboardComponents.push({
 <label class="control-label" id="filterParticipants-label" for="filterParticipants">Participants</label>
 <div>
 <select class="shiny-input-select form-control" id="filterParticipants" multiple="multiple"><option value="1" selected>1</option>
+<option value="10" selected>10</option>
 <option value="2" selected>2</option>
-<option value="3" selected>3</option></select>
+<option value="3" selected>3</option>
+<option value="4" selected>4</option>
+<option value="5" selected>5</option>
+<option value="6" selected>6</option>
+<option value="7" selected>7</option>
+<option value="8" selected>8</option>
+<option value="9" selected>9</option></select>
 <script type="application/json" data-for="filterParticipants">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
@@ -1923,8 +1930,15 @@ data-orientation="columns">
 <label class="control-label" id="participant-label" for="participant">participant</label>
 <div>
 <select class="shiny-input-select form-control" id="participant"><option value="1" selected>1</option>
+<option value="10">10</option>
 <option value="2">2</option>
-<option value="3">3</option></select>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option></select>
 <script type="application/json" data-for="participant">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
@@ -2062,8 +2076,15 @@ data-orientation="columns">
 <label class="control-label" id="participant2d-label" for="participant2d">participant</label>
 <div>
 <select class="shiny-input-select form-control" id="participant2d"><option value="1" selected>1</option>
+<option value="10">10</option>
 <option value="2">2</option>
-<option value="3">3</option></select>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option></select>
 <script type="application/json" data-for="participant2d">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
@@ -3505,8 +3526,7 @@ allQResults <- get_all_questionnaire_results()
 
 adjust_times <- function(dataset, minTime) { # make sure we start at t=0
   dataset$time <- dataset$time - minTime
-  dataset <- subset(dataset)#, time <= 180)#dataset <- subset(dataset)
-  print(dataset$time[1])
+  dataset <- subset(dataset, time <= 180)#dataset <- subset(dataset)
   return(dataset)
 }
 
@@ -3539,11 +3559,11 @@ preprocess_data <- function(participant, trialNum){
   rightFoot = get_t_data(participant, "rightfoot", trialNum)
   hip = get_t_data(participant, "hip", trialNum)
   targetData = get_t_data(participant, "steptargets", trialNum)
-#get_t_data(participant, "leftnoise", trialNum),
-#get_t_data(participant, "rightnoise", trialNum),
-#rightFoot <- calc_final_pos(rightFoot, rightNoise)
-#leftFoot <- calc_final_pos(leftFoot, leftNoise)
-  minTime <- get_p_results(participant,"start_time",trialNum)
+  leftDisturbance <- get_t_data(participant, "leftdisturbance", trialNum)
+  rightDisturbance <- get_t_data(participant, "rightdisturbance", trialNum)
+#rightFoot <- calc_final_pos(rightFoot, rightDisturbance)
+#leftFoot <- calc_final_pos(leftFoot, leftDisturbance)
+  minTime <- leftFoot$time[1] #get_p_results(participant,"start_time",trialNum)
 
   moveSpeed = get_move_speed(participant)
   leftFoot = adjust_times(leftFoot, minTime)
@@ -3554,6 +3574,8 @@ preprocess_data <- function(participant, trialNum){
   return(list(
     leftFoot = leftFoot,
     rightFoot = rightFoot,
+    leftDisturbance = leftDisturbance,
+    rightDisturbance = rightDisturbance,
     hip = adjust_times(hip, minTime),
     targetData = adjust_times(targetData, minTime)
   ))
@@ -4618,7 +4640,7 @@ output$scatter <- renderPlot({
 <!--/html_preserve-->
 <!--html_preserve-->
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120]}},"value":[{"type":"character","attributes":{},"value":["abind","backports","base","bayestestR","boot","broom","bslib","cachem","car","carData","cellranger","cli","coda","codetools","colorspace","compiler","correlation","data.table","datasets","datawizard","devtools","digest","dplyr","DT","effectsize","ellipsis","emmeans","estimability","evaluate","fansi","fastmap","flexdashboard","fontawesome","fs","generics","ggpattern","ggplot2","ggpubr","ggside","ggsignif","ggstatsplot","glue","graphics","grDevices","grid","gtable","htmltools","htmlwidgets","httpuv","insight","jquerylib","jsonlite","knitr","later","lattice","lifecycle","lme4","magrittr","MASS","Matrix","memoise","methods","mime","miniUI","minqa","munsell","mvtnorm","nlme","nloptr","paletteer","parameters","patchwork","pillar","pkgbuild","pkgconfig","pkgload","plotrix","plyr","profvis","promises","purrr","pwr","R6","RColorBrewer","Rcpp","readxl","rematch2","remotes","rlang","rmarkdown","Rmisc","rstatix","rstudioapi","sass","scales","sessioninfo","shiny","signal","splines","stats","statsExpressions","stringi","stringr","svglite","systemfonts","tibble","tidyr","tidyselect","tools","urlchecker","usethis","utf8","utils","vctrs","withr","xfun","xtable","yaml","zeallot","zoo"]},{"type":"character","attributes":{},"value":["1.4-5","1.4.1","4.4.0","0.13.2","1.3-30","1.0.6","0.7.0","1.1.0","3.1-2","3.0-5","1.1.0","3.6.2","0.19-4.1","0.2-20","2.1-0","4.4.0","0.8.4","1.15.4","4.4.0","0.10.0","2.4.5","0.6.35","1.1.4","0.33","0.8.8","0.3.2","1.10.1","1.5.1","0.23","1.0.6","1.2.0","0.6.2","0.5.2","1.6.4","0.1.3","1.0.1","3.5.1","0.6.0","0.3.1","0.6.4","0.12.3","1.7.0","4.4.0","4.4.0","4.4.0","0.3.5","0.5.8.1","1.6.4","1.6.15","0.19.11","0.1.4","1.8.8","1.46","1.3.2","0.22-6","1.0.4","1.1-35.3","2.0.3","7.3-60.2","1.7-0","2.0.1","4.4.0","0.12","0.1.1.1","1.2.6","0.5.1","1.2-4","3.1-164","2.0.3","1.6.0","0.21.7","1.2.0","1.9.0","1.4.4","2.0.3","1.3.4","3.8-4","1.8.9","0.3.8","1.3.0","1.0.2","1.3-0","2.5.1","1.1-3","1.0.12","1.4.3","2.1.2","2.5.0","1.1.3","2.27","1.5.1","0.7.2","0.16.0","0.4.9","1.3.0","1.2.2","1.8.1.1","1.8-0","4.4.0","4.4.0","1.5.4","1.8.4","1.5.1","2.1.3","1.1.0","3.2.1","1.3.1","1.2.1","4.4.0","1.0.1","2.2.3","1.2.4","4.4.0","0.6.5","3.0.0","0.44","1.8-4","2.3.8","0.1.0","1.8-12"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120]}},"value":[{"type":"character","attributes":{},"value":["abind","backports","base","bayestestR","boot","broom","bslib","cachem","car","carData","cellranger","cli","coda","codetools","colorspace","compiler","correlation","data.table","datasets","datawizard","devtools","digest","dplyr","DT","effectsize","ellipsis","emmeans","estimability","evaluate","fansi","fastmap","flexdashboard","fontawesome","fs","generics","ggpattern","ggplot2","ggpubr","ggside","ggsignif","ggstatsplot","glue","graphics","grDevices","grid","gtable","htmltools","htmlwidgets","httpuv","insight","jquerylib","jsonlite","knitr","later","lattice","lifecycle","lme4","magrittr","MASS","Matrix","memoise","methods","mime","miniUI","minqa","munsell","mvtnorm","nlme","nloptr","paletteer","parameters","patchwork","pillar","pkgbuild","pkgconfig","pkgload","plotrix","plyr","profvis","promises","purrr","pwr","R6","RColorBrewer","Rcpp","readxl","rematch2","remotes","rlang","rmarkdown","Rmisc","rstatix","rstudioapi","sass","scales","sessioninfo","shiny","signal","splines","stats","statsExpressions","stringi","stringr","svglite","systemfonts","tibble","tidyr","tidyselect","tools","urlchecker","usethis","utf8","utils","vctrs","withr","xfun","xtable","yaml","zeallot","zoo"]},{"type":"character","attributes":{},"value":["1.4-5","1.4.1","4.4.0","0.13.2","1.3-30","1.0.6","0.7.0","1.1.0","3.1-2","3.0-5","1.1.0","3.6.2","0.19-4.1","0.2-20","2.1-0","4.4.0","0.8.4","1.15.4","4.4.0","0.10.0","2.4.5","0.6.35","1.1.4","0.33","0.8.8","0.3.2","1.10.2","1.5.1","0.23","1.0.6","1.2.0","0.6.2","0.5.2","1.6.4","0.1.3","1.0.1","3.5.1","0.6.0","0.3.1","0.6.4","0.12.3","1.7.0","4.4.0","4.4.0","4.4.0","0.3.5","0.5.8.1","1.6.4","1.6.15","0.19.11","0.1.4","1.8.8","1.46","1.3.2","0.22-6","1.0.4","1.1-35.3","2.0.3","7.3-60.2","1.7-0","2.0.1","4.4.0","0.12","0.1.1.1","1.2.7","0.5.1","1.2-4","3.1-164","2.0.3","1.6.0","0.21.7","1.2.0","1.9.0","1.4.4","2.0.3","1.3.4","3.8-4","1.8.9","0.3.8","1.3.0","1.0.2","1.3-0","2.5.1","1.1-3","1.0.12","1.4.3","2.1.2","2.5.0","1.1.3","2.27","1.5.1","0.7.2","0.16.0","0.4.9","1.3.0","1.2.2","1.8.1.1","1.8-0","4.4.0","4.4.0","1.5.4","1.8.4","1.5.1","2.1.3","1.1.0","3.2.1","1.3.1","1.2.1","4.4.0","1.0.1","2.2.3","1.2.4","4.4.0","0.6.5","3.0.0","0.44","1.8-4","2.3.8","0.1.0","1.8-12"]}]}]}
 </script>
 <!--/html_preserve-->
 </div>
